# anna

./: .gitignore  Cargo.toml  world.wit
src/: lib.rs  main.rs  openai.rs  plugins.rs  wttr.rs
wit/: foo.wit
