[package]
name = "anna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = "0.4.24"
futures = "0.3.27"
irc = { git = "https://github.com/aatxe/irc", version = "0.15.0" }
md5 = "0.7.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.4.0"
textwrap = "0.16.0"
tokio = { version = "1.26.0", features = ["full"] }
wasmtime = { version = "9.0.0", features = ["component-model"] }
