[package]
name = "anna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.19.0"
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = "0.4.24"
futures = "0.3.27"
irc = { git = "https://github.com/aatxe/irc", version = "0.15.0" }
md5 = "0.7.0"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
#rustpython-vm = { git = "https://github.com/RustPython/RustPython", version = "0.2.0" }
schemars = "0.8.12"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.4.0"
textwrap = "0.16.0"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.4.1"
#wasmtime = { version = "9.0.0", features = ["component-model"] }
